--- a/config.properties
+++ b/config.properties
@@ -1,12 +1,4 @@
 browser=chrome
-env=https://library1.cydeo.com/
-username=hr2@cydeo.com
-password=UserUser
-url=https://google.com/
-search.keyword=tesla
-reg.url=https://practice.cydeo.com/registration_form
-
-# key=value
-# "#" is for commenting
-# do not put extra space after you write value
-# key has to be unique
+url=https://www.etsy.com/signin
+username=lihajim681@3mkz.com
+password=@,:8s@!xHZdzSs-
