--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,13 +1,13 @@
 node {
     stage('Clone code') {
-        git 'https://github.com/mehmetCt/demo-project.git'
+        git 'https://github.com/MakhmudovYakhyo/cucumber_junit'
     }
 
     stage('Run tests'){
         if(isUnix()){
             sh "mvn clean test"
         } else {
-            bat "mvn clean test -Dcucumber.filter.tags=\"@regression\" "
+            bat "test -Dcucumber.filter.tags=\"@Regression\" "
         }
 
     }
