--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,7 +7,7 @@ node {
         if(isUnix()){
             sh "mvn clean test"
         } else {
-            bat "test -Dcucumber.filter.tags=\"@Regression\" "
+            bat "mvn clean test -Dcucumber.filter.tags=\"@Regression\" "
         }
 
     }
